<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">


    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="@dimen/toolbar_height"
        android:background="@color/colorPrimary"
        android:titleTextColor="@android:color/white"
        app:titleTextAppearance="@style/Toolbar.TitleText" />

    <EditText
        android:id="@+id/old_pwd"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/normal_margin"
        android:background="@drawable/bg_edit"
        android:gravity="start"
        android:hint="@string/old_password_hint"
        android:inputType="textPassword"
        android:maxLines="1"
        android:padding="@dimen/small_padding" />

    <EditText
        android:id="@+id/new_pwd"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/normal_margin"
        android:background="@drawable/bg_edit"
        android:gravity="start"
        android:hint="@string/new_password_hint"
        android:inputType="textPassword"
        android:maxLines="1"
        android:padding="@dimen/small_padding" />

    <EditText
        android:id="@+id/confirm_new_pwd"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/normal_margin"
        android:background="@drawable/bg_edit"
        android:gravity="start"
        android:hint="@string/confirm_new_password_hint"
        android:inputType="textPassword"
        android:maxLines="1"
        android:padding="@dimen/small_padding" />

    <Button
        android:id="@+id/confirm"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/normal_margin"
        android:backgroundTint="@color/colorPrimary"
        android:gravity="center"
        android:text="@string/confirm"
        android:textColor="@color/white" />

</LinearLayout>

