<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">


    <android.support.v7.widget.Toolbar
        android:id="@+id/book_info_toolbar"
        android:layout_width="match_parent"
        android:layout_height="@dimen/toolbar_height"
        android:background="@color/colorPrimary"
        android:titleTextColor="@android:color/white"
        app:titleTextAppearance="@style/Toolbar.TitleText" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/pic"
                android:layout_width="@dimen/navigation_view_width"
                android:layout_height="@dimen/big_edit_text_height"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="@dimen/normal_margin"
                android:src="@drawable/img_add" />

            <TextView
                android:id="@+id/book_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/normal_margin"
                android:layout_marginRight="@dimen/normal_margin"
                android:layout_marginTop="@dimen/small_padding"
                android:gravity="start"
                android:paddingLeft="@dimen/small_padding"
                android:paddingRight="@dimen/small_padding"
                android:text="@string/bookName"
                android:textSize="@dimen/normal_text_size" />

            <TextView
                android:id="@+id/book_author"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/normal_margin"
                android:layout_marginRight="@dimen/normal_margin"
                android:layout_marginTop="@dimen/small_padding"
                android:gravity="start"
                android:paddingLeft="@dimen/small_padding"
                android:paddingRight="@dimen/small_padding"
                android:text="@string/author"
                android:textSize="@dimen/normal_text_size" />

            <TextView
                android:id="@+id/book_category"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/normal_margin"
                android:layout_marginRight="@dimen/normal_margin"
                android:layout_marginTop="@dimen/small_padding"
                android:gravity="start"
                android:paddingLeft="@dimen/small_padding"
                android:paddingRight="@dimen/small_padding"
                android:text="@string/category"
                android:textSize="@dimen/normal_text_size" />

            <TextView
                android:id="@+id/book_publication"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/normal_margin"
                android:layout_marginRight="@dimen/normal_margin"
                android:layout_marginTop="@dimen/small_padding"
                android:gravity="start"
                android:paddingLeft="@dimen/small_padding"
                android:paddingRight="@dimen/small_padding"
                android:text="@string/publication"
                android:textSize="@dimen/normal_text_size" />

            <TextView
                android:id="@+id/book_publication_date"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/normal_margin"
                android:layout_marginRight="@dimen/normal_margin"
                android:layout_marginTop="@dimen/small_padding"
                android:gravity="start"
                android:paddingLeft="@dimen/small_padding"
                android:paddingRight="@dimen/small_padding"
                android:text="@string/publication_date"
                android:textSize="@dimen/normal_text_size" />

            <TextView
                android:id="@+id/book_stock"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/normal_margin"
                android:layout_marginRight="@dimen/normal_margin"
                android:layout_marginTop="@dimen/small_padding"
                android:gravity="start"
                android:paddingLeft="@dimen/small_padding"
                android:paddingRight="@dimen/small_padding"
                android:text="@string/stock"
                android:textSize="@dimen/normal_text_size" />

            <TextView
                android:id="@+id/book_summary"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/normal_margin"
                android:layout_marginRight="@dimen/normal_margin"
                android:layout_marginTop="@dimen/small_padding"
                android:gravity="start"
                android:paddingLeft="@dimen/small_padding"
                android:paddingRight="@dimen/small_padding"
                android:text="@string/summary"
                android:textSize="@dimen/normal_text_size" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="horizontal">

                    <Button
                        android:id="@+id/bt_booking"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="@dimen/normal_margin"
                        android:backgroundTint="@color/colorPrimary"
                        android:gravity="center"
                        android:text="@string/booking"
                        android:textColor="@color/white" />

                    <Button
                        android:id="@+id/bt_undo_booking"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="@dimen/normal_margin"
                        android:backgroundTint="@color/colorPrimary"
                        android:gravity="center"
                        android:text="@string/cancel_booking"
                        android:textColor="@color/white"
                        android:visibility="gone" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="horizontal">

                    <Button
                        android:id="@+id/bt_collect"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/normal_margin"
                        android:layout_marginRight="@dimen/normal_margin"
                        android:backgroundTint="@color/colorPrimary"
                        android:gravity="center"
                        android:text="@string/collect"
                        android:textColor="@color/white" />

                    <Button
                        android:id="@+id/bt_undo_collect"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/normal_margin"
                        android:layout_marginRight="@dimen/normal_margin"
                        android:backgroundTint="@color/colorPrimary"
                        android:gravity="center"
                        android:text="@string/cancel_collect"
                        android:textColor="@color/white"
                        android:visibility="gone" />
                </LinearLayout>

                <Button
                    android:id="@+id/bt_send_comment"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/normal_margin"
                    android:layout_marginRight="@dimen/normal_margin"
                    android:layout_weight="1"
                    android:backgroundTint="@color/colorPrimary"
                    android:gravity="center"
                    android:text="@string/send_comment"
                    android:textColor="@color/white" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

</LinearLayout>

