<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:background="@drawable/bg_launch"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.ljy.librarymanager.mvp.ui.activity.LoginActivity">

    <EditText
        android:id="@+id/login_accounts"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/small_padding"
        android:layout_marginRight="@dimen/small_padding"
        android:background="@android:color/white"
        android:hint="@string/account_hint"
        android:inputType="number"
        android:maxLines="1"
        android:padding="@dimen/small_padding" />

    <EditText
        android:id="@+id/login_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/login_accounts"
        android:layout_marginLeft="@dimen/small_padding"
        android:layout_marginRight="@dimen/small_padding"
        android:layout_marginTop="@dimen/big_margin"
        android:background="@android:color/white"
        android:hint="@string/password_hint"
        android:inputType="textPassword"
        android:maxLines="1"
        android:padding="@dimen/small_padding" />

    <EditText
        android:id="@+id/login_checkcode_edittext"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/login_password"
        android:layout_marginLeft="@dimen/small_padding"
        android:layout_marginTop="@dimen/big_margin"
        android:background="@android:color/white"
        android:hint="@string/checkcode_hint"
        android:padding="@dimen/small_padding" />

    <ImageView
        android:id="@+id/login_checkcode_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/login_password"
        android:layout_marginLeft="@dimen/large_margin"
        android:layout_marginTop="@dimen/big_margin"
        android:layout_toRightOf="@id/login_checkcode_edittext" />

    <Button
        android:id="@+id/login_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/login_checkcode_edittext"
        android:backgroundTint="@color/colorPrimary"
        android:textColor="@color/white"
        android:layout_marginTop="@dimen/normal_margin"
        android:gravity="center"
        android:text="@string/login" />

</RelativeLayout>
