<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">


    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="@dimen/toolbar_height"
        android:background="@color/colorPrimary"
        android:titleTextColor="@android:color/white"
        app:titleTextAppearance="@style/Toolbar.TitleText" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/pic"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:src="@mipmap/ic_launcher" />

            <TextView
                android:id="@+id/book_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/normal_margin"
                android:layout_marginRight="@dimen/normal_margin"
                android:layout_marginTop="@dimen/small_padding"
                android:gravity="start"
                android:paddingLeft="@dimen/small_padding"
                android:paddingRight="@dimen/small_padding"
                android:text="@string/bookName"
                android:textSize="@dimen/normal_text_size" />

            <TextView
                android:id="@+id/book_author"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/normal_margin"
                android:layout_marginRight="@dimen/normal_margin"
                android:layout_marginTop="@dimen/small_padding"
                android:gravity="start"
                android:paddingLeft="@dimen/small_padding"
                android:paddingRight="@dimen/small_padding"
                android:text="@string/author"
                android:textSize="@dimen/normal_text_size" />

            <TextView
                android:id="@+id/book_category"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/normal_margin"
                android:layout_marginRight="@dimen/normal_margin"
                android:layout_marginTop="@dimen/small_padding"
                android:gravity="start"
                android:paddingLeft="@dimen/small_padding"
                android:paddingRight="@dimen/small_padding"
                android:text="@string/category"
                android:textSize="@dimen/normal_text_size" />

            <TextView
                android:id="@+id/book_publication"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/normal_margin"
                android:layout_marginRight="@dimen/normal_margin"
                android:layout_marginTop="@dimen/small_padding"
                android:gravity="start"
                android:paddingLeft="@dimen/small_padding"
                android:paddingRight="@dimen/small_padding"
                android:text="@string/publication"
                android:textSize="@dimen/normal_text_size" />

            <TextView
                android:id="@+id/book_publication_date"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/normal_margin"
                android:layout_marginRight="10dp"
                android:layout_marginTop="5dp"
                android:gravity="start"
                android:paddingLeft="5dp"
                android:paddingRight="5dp"
                android:text="出版日期："
                android:textSize="20dp" />

            <TextView
                android:id="@+id/book_stock"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/normal_margin"
                android:layout_marginRight="@dimen/normal_margin"
                android:layout_marginTop="@dimen/small_padding"
                android:gravity="start"
                android:paddingLeft="@dimen/small_padding"
                android:paddingRight="@dimen/small_padding"
                android:text="@string/stock"
                android:textSize="@dimen/normal_text_size" />

            <TextView
                android:id="@+id/book_summary"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/normal_margin"
                android:layout_marginRight="@dimen/normal_margin"
                android:layout_marginTop="@dimen/small_padding"
                android:gravity="start"
                android:paddingLeft="@dimen/small_padding"
                android:paddingRight="@dimen/small_padding"
                android:text="@string/summary"
                android:textSize="@dimen/normal_text_size" />

            <TextView
                android:id="@+id/updateDate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/normal_margin"
                android:layout_marginRight="@dimen/normal_margin"
                android:layout_marginTop="@dimen/small_padding"
                android:gravity="start"
                android:paddingLeft="@dimen/small_padding"
                android:paddingRight="@dimen/small_padding"
                android:textSize="@dimen/normal_text_size" />

            <TextView
                android:id="@+id/updateManager"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/normal_margin"
                android:layout_marginRight="@dimen/normal_margin"
                android:layout_marginTop="@dimen/small_padding"
                android:gravity="start"
                android:paddingLeft="@dimen/small_padding"
                android:paddingRight="@dimen/small_padding"
                android:textSize="@dimen/normal_text_size" />


            <RadioGroup
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/normal_margin"
                android:layout_marginRight="@dimen/normal_margin"
                android:layout_marginTop="@dimen/large_margin"
                android:gravity="center"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/is_return"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/is_return" />

                <RadioButton
                    android:id="@+id/is_not_return"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:checked="true"
                    android:text="@string/is_not_return" />
            </RadioGroup>

            <Button
                android:id="@+id/bt_save"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/normal_margin"
                android:backgroundTint="@color/colorPrimary"
                android:gravity="center"
                android:text="@string/save"
                android:textColor="@color/white" />
        </LinearLayout>
    </ScrollView>
</LinearLayout>

