<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">


    <android.support.v7.widget.Toolbar
        android:id="@+id/book_info_toolbar"
        android:layout_width="match_parent"
        android:layout_height="@dimen/toolbar_height"
        android:background="@color/colorPrimary"
        android:titleTextColor="@android:color/white"
        app:titleTextAppearance="@style/Toolbar.TitleText" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/pic"
                android:layout_marginTop="@dimen/normal_margin"
                android:layout_gravity="center_horizontal"
                android:layout_width="@dimen/navigation_view_width"
                android:layout_height="@dimen/big_edit_text_height"
                android:src="@drawable/img_add" />

            <EditText
                android:id="@+id/book_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/normal_margin"
                android:layout_marginRight="@dimen/normal_margin"
                android:layout_marginTop="@dimen/normal_margin"
                android:background="@drawable/bg_edit"
                android:gravity="start"
                android:hint="@string/bookName"
                android:padding="@dimen/small_padding"
                android:textSize="@dimen/normal_text_size" />

            <EditText
                android:id="@+id/book_author"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/normal_margin"
                android:layout_marginRight="@dimen/normal_margin"
                android:layout_marginTop="@dimen/normal_margin"
                android:background="@drawable/bg_edit"
                android:gravity="start"
                android:hint="@string/author"
                android:padding="@dimen/small_padding"
                android:textSize="@dimen/normal_text_size" />

            <Spinner
                android:id="@+id/book_category"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/normal_margin"
                android:layout_marginRight="@dimen/normal_margin"
                android:layout_marginTop="@dimen/normal_margin"
                android:background="@drawable/bg_edit"
                android:gravity="start"
                android:textSize="@dimen/normal_text_size" />

            <EditText
                android:id="@+id/book_publication"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/normal_margin"
                android:layout_marginRight="@dimen/normal_margin"
                android:layout_marginTop="@dimen/normal_margin"
                android:background="@drawable/bg_edit"
                android:gravity="start"
                android:hint="@string/publication"
                android:padding="@dimen/small_padding"
                android:textSize="@dimen/normal_text_size" />

            <EditText
                android:id="@+id/book_publication_date"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/bg_edit"
                android:gravity="start"
                android:hint="出版日期"
                android:padding="5dp"
                android:text="出版日期："
                android:textSize="20dp" />

            <EditText
                android:id="@+id/book_stock"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/normal_margin"
                android:layout_marginRight="@dimen/normal_margin"
                android:layout_marginTop="@dimen/normal_margin"
                android:background="@drawable/bg_edit"
                android:gravity="start"
                android:hint="@string/stock"
                android:padding="@dimen/small_padding"
                android:inputType="number"
                android:maxLines="1"
                android:text="0"
                android:textSize="@dimen/normal_text_size" />

            <EditText
                android:id="@+id/book_summary"
                android:layout_width="match_parent"
                android:layout_height="@dimen/normal_edit_text_height"
                android:layout_marginLeft="@dimen/normal_margin"
                android:layout_marginRight="@dimen/normal_margin"
                android:layout_marginTop="@dimen/normal_margin"
                android:background="@drawable/bg_edit"
                android:gravity="start"
                android:hint="@string/summary"
                android:padding="@dimen/small_padding"
                android:textSize="@dimen/normal_text_size" />


            <Button
                android:id="@+id/bt_save"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/normal_margin"
                android:backgroundTint="@color/colorPrimary"
                android:gravity="center"
                android:text="@string/save"
                android:textColor="@color/white" />

            <Button
                android:id="@+id/bt_reset"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/normal_margin"
                android:layout_marginRight="@dimen/normal_margin"
                android:backgroundTint="@color/colorPrimary"
                android:gravity="center"
                android:text="@string/reset"
                android:textColor="@color/white" />
        </LinearLayout>
    </ScrollView>
</LinearLayout>

